# gmail-sender

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  gmail_sender.py  mypy.ini  pyproject.toml  report.txt  requirements.txt
.github/workflows/: ci.yml
examples/: app_bulk_reuse_service.py  app_bulk_simple.py  app_custom_secrets_dir.py  app_send_html.py  app_send_text.py  app_send_with_cc_bcc_attachments.py  app_with_error_handling.py  hello.html  worker_task.py
tests/: test_gmail_sender.py
